--- a/style.css
+++ b/style.css
@@ -73,7 +73,25 @@ main {
 
 /* Estilos del botón de Instagram */
 .instagram-btn {
-    background-color: #E4405F;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    cursor: pointer;
+    margin-top: 20px; /* Agrega un espacio superior para separar el botón del pie de página */
+}
+
+.facebook-btn:hover {
+    background-color: #4CAF50;
+}
+
+.facebook-btn {
+    background-color: #4CAF50;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -87,5 +105,5 @@ main {
 }
 
 .instagram-btn:hover {
-    background-color: #C13584;
+    background-color: #4CAF50;
 }
