--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+
 /* Estilos generales */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: white;
     margin: 0;
     padding: 0;
 }
