--- a/style2.css
+++ b/style2.css
@@ -1,16 +1,16 @@
 /* Estilos generales */
 body {
     font-family: Arial, sans-serif;
-    background-color: blue;
+    background-color: navy;
     margin: 0;
-    padding: 0;
+    padding: 4;
 }
 
 header {
     background-color: blue;
-    color: white;
+    color:black;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
 }
 
 h1 {
@@ -21,3 +21,27 @@ h1 {
 p {
     font-size: 1.2em;
 }
+
+.logo {
+    width: 80px;
+    height: auto;
+    border-radius: 10px;
+    margin-right: 10px; 
+}
+
+.informacion { 
+    padding: 10px;
+    height: auto;
+    text-align: center;
+    color: white;
+}
+
+.video{
+    width: 600px;
+    height: auto;
+    display: block; /* block para que se centre */
+    margin: 20px auto   ; /* Margen Superior e inferior */
+    border-radius: 10px;
+    text-align: center;
+}
+
