--- a/style.css
+++ b/style.css
@@ -203,3 +203,30 @@ div2 {
     cursor: pointer;
     margin-top: 1px; /* Agrega un espacio superior para separar el botón del pie de página */
 }
+
+.Champions {
+    background-color: #fff;
+    padding: 10px;
+    margin: 0 15%;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+div2 {
+    color: #333;
+}
+
+/* Semáforo */
+.btn-danger2 {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 15px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    cursor: pointer;
+    margin-top: 1px; /* Agrega un espacio superior para separar el botón del pie de página */
+}
